# phub

./: Cargo.toml  README.md  clean.sh  files.db
src/: db.rs  file.rs  main.rs  pdf.rs  pdf_slint.rs  view.rs
ui/: app.slint
