[package]
name = "phub"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.15.1"
walkdir = "2.5.0"
chrono = "0.4.44"
rusqlite = { version = "0.31.0", features = ["bundled"] }
lopdf = "0.32.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
pdfium-render = "0.8.37"
image = "0.24.9"
base64 = "0.21.7"
dirs = "5.0.1"
once_cell = "1.21.4"

[build-dependencies]
slint-build = "1.8"
