[package]
name = "phub"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.15.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
sha2 = "0.10.9"
pdfium-render = { version = "0.8.37", features = ["pdfium_latest"] }
image = "0.25.10"
dirs = "5.0.1"

[build-dependencies]
slint-build = "1.15.1"
